--- a/web/js/styles.css
+++ b/web/js/styles.css
@@ -42,7 +42,7 @@ A:hover {text-decoration: underline; color: black;}
     font-family: Tahoma, Garamond, Courier, Arial;
     font-color: green;
     width: 150pt;
-    height: 100%;
+    height: 900px;
 }
 
 .menu_title{
